web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-function-expression-object-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,21)
1|(function({x, y}) { "use strict"; })
 |                   ^
